<resources>
    <string name="app_name">GoJob</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="invalid_data_message">Invalid data</string>
    <string name="invalid_data_button">Try again</string>
    <string name="title_activity_maps">Map</string>
    <string name="bt_back">Back</string>
    <string name="bt_text_clear">Очистить</string>
    <string name="bt_text_apply">Применить</string>
    <string name="worker">Работник</string>
    <string name="employer">Работодатель</string>
    <string name="text_for_worker">text for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for workertext for worker</string>
    <string name="text_for_employer">text for employer text for employer text for employer text for employer text for employer text for employer text for employer text for employer text for employer text for employer text for employer text for employer text for employer text for employer text for employer text for employer text for employer text for employer text for employer text for employer text for employer text for employer text for employer text for employer text for employer text for employer text for employer text for employer</string>
    <string name="for_I_do_not_have_foreign_passport">У МЕНЯ НЕТ ЗАГРАНИЧНОГО ПАСПОРТА</string>
    <string name="for_I_am_already_in_poland">Я УЖЕ НАХОЖУСЬ В ПОЛЬШЕ</string>
    <string name="for_I_do_not_have_work_visa">У МЕНЯ ЕСТЬ ПАСПОРТ, НО НЕТ РАБОЧЕЙ ВИЗЫ</string>
    <string name="for_I_have_no_job">У МЕНЯ ЕСТЬ ВИЗА, НО НЕТ РАБОТЫ</string>
    <string name="text_for_registration_your_self">Text for registration your self. Text for registration your self. Text for registration your self. Text for registration your self. Text for registration your self. Text for registration your self.</string>
    <string name="text_for_need_help">Text for need help. Text for need help. Text for need help. Text for need help. Text for need help. Text for need help. Text for need help.</string>
    <string name="need_help">Нужна помощь</string>
    <string name="text_for_visa_d_05">Text for visa D - 05. Text for visa D - 05. Text for visa D - 05. Text for visa D - 05. Text for visa D - 05. Text for visa D - 05. Text for visa D - 05.</string>
    <string name="type_of_visa_d_05">Виза тип D - 05</string>
    <string name="type_of_visa_d_07">Виза тип D - 07</string>
    <string name="text_for_visa_d_07">Text for visa D - 07. Text for visa D - 07. Text for visa D - 07. Text for visa D - 07. Text for visa D - 07. Text for visa D - 07. Text for visa D - 07.</string>
    <string name="for_nearest_agents">Ближайшие агенты</string>
    <string name="for_list_of_documents">Перечень документов</string>
    <string name="for_appoint_admission_date">Назначить дату записи</string>
    <string name="for_find_a_job_with_a_free_invitation">НАЙТИ ВАКАНСИЮ С БЕСПЛАТНЫМ ПРИГЛАШЕНИЕМ</string>
    <string name="register_your_self">ВЫБЕРИТЕ ТИП ПАСПОРТА</string>
    <string name="list_of_documents_and_payments">ПЕРЕЧЕНЬ ДОКУМЕНТОВ И ПЛАТЕЖЕЙ</string>
    <string name="nearest_ovir">БЛИЖАЙШИЙ ОВИР</string>
    <string name="order_a_certificate_of_criminal_records">ЗАКАЗАТЬ СПРАВКУ О НЕСУДИМОСТИ</string>
    <string name="synchronization_calendar_cloud">СИНХРОНИЗАЦИЯ КАЛЕНДАРЬ ОБЛАКО</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="log_out">Log out</string>
    <string name="delete_this_user">delete</string>
    <string name="biometric">Biometric</string>
    <string name="child_psssword">child pssspord</string>
    <string name="issue_for_20_days">Issue for 20 days</string>
    <string name="go">GO</string>
    <string name="issue_for_7_days">Issue passport for 7 days</string>
    <string name="cost_557_32_grn">Cost: 557,32 grn</string>
    <string name="cost_810_32_grn">Cost: 810,32 grn</string>
    <string name="passport_origin">Ukrainian passport\n(origin)</string>
    <string name="ukraine_passport_copy">Ukraine passport\n(copy)</string>
    <string name="individual_nalog_number_origin">Individual nalog number\n(origin)</string>
    <string name="individual_nalog_number_copy">Individual nalog number\n(copy)</string>
    <string name="old_passpot_if_you_have">Old passport\n(if you have)</string>
    <string name="reciept_of_payment_from_bank_n_wet_seal">Reciept of payment from bank (wet seal)</string>
    <string name="recvesite_for_pay">Recvesite for pay</string>
    <string name="cost_adminastrative_npassport_blancs">Cost adminastrative: .... Passport blancs: ...</string>
    <string name="some_text">Some text...</string>
    <string name="you_need_paid">You need paid: ...</string>
    <string name="title_activity_maps_passport">Map</string>
</resources>
