<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dev.gojob.roles.ObtainingForeignPassport">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_list_of_documents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/top_left_quadrant"
            android:hapticFeedbackEnabled="false"
            android:onClick="onClick"
            android:text="@string/list_of_documents_and_payments"
            android:textAlignment="center" />

        <Button
            android:id="@+id/bt_synhronize_calendar_cloud"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/bottom_left_quadrant"
            android:hapticFeedbackEnabled="false"
            android:onClick="onClick"
            android:text="@string/synchronization_calendar_cloud"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_nearest_ovir"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/top_right_quadrant"
            android:hapticFeedbackEnabled="false"
            android:onClick="onClick"
            android:text="@string/nearest_ovir"
            android:textAlignment="center" />

        <Button
            android:id="@+id/bt_certificate_of_criminal_record"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/bottom_right_quadrant"
            android:hapticFeedbackEnabled="false"
            android:onClick="onClick"
            android:text="@string/order_a_certificate_of_criminal_records"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>