<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/passport_execution"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/register_your_self"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/first"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <TextView
                android:id="@+id/tv_register_your_self"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:text="@string/register_your_self"
                android:gravity="center_horizontal"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_registrate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/text_for_registration_your_self"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@+id/bt_for_registration_your_self"
                        android:layout_width="74dp"
                        android:layout_height="74dp"
                        android:layout_gravity="center_horizontal"
                        app:srcCompat="@drawable/b_ok"
                        android:background="@null"
                        android:scaleType="centerCrop"/>

                </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/need_help"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/second"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <TextView
                android:id="@+id/tv_need_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:text="@string/need_help"
                android:gravity="center_horizontal"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_need_help_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/text_for_need_help"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@+id/bt_for_need_help"
                        android:layout_width="74dp"
                        android:layout_height="74dp"
                        android:layout_gravity="center_horizontal"
                        app:srcCompat="@drawable/b_ok"
                        android:background="@null"
                        android:scaleType="centerCrop"/>
                </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>