<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_reqvesite_for_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recvesite_for_pay"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_named"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_named"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/issue_for_7_days"
        android:layout_weight="1"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0" />
    <TextView
        android:id="@+id/tv_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cost_810_32_grn"
        android:layout_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/named"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/tv_cost_operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cost_adminastrative_npassport_blancs"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_reqvesite_for_pay"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/tv_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/some_text"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_cost_operation"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/tv_summ_paid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_need_paid"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_information"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/bt_go_to_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Found near bank"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/tv_summ_paid"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_summ_paid"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="goToMap"/>

    <ImageButton
        android:id="@+id/ib_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_dialog_email"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/bt_go_to_map"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/ib_print"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal_background"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/bt_go_to_map"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/ib_pdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/checkbox_off_background"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/bt_go_to_map"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>